--- a/htdocs/assets/css/main.css
+++ b/htdocs/assets/css/main.css
@@ -72,3 +72,14 @@ div.nav span.active {
   display: inline-grid;
   width: 100px;
 }
+
+.form {
+  width: 100%;
+}
+
+.form .row {
+  width: 100%;
+  padding-bottom: 10px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+}
